--- a/app/views/shared/_offer.html.erb
+++ b/app/views/shared/_offer.html.erb
@@ -1,4 +1,4 @@
-<div class="relative">
+<div class="relative offer">
   <%= cl_image_tag offer.offerable.photos.first.key, class: "object-cover w-full xl:w-96 h-96 md:h-80 lg:h-60 rounded-lg" %>
 
   <% if current_user == offer.offerable.user %>
@@ -15,7 +15,7 @@
     <%= simple_form_for offer, url: offer_path(offer), method: :patch do |f| %>
       <%= f.error_notification %>
 
-      <div class="form-inputs  space-y-4 w-full flex flex-col justify-center items-center mx-12 md:mx-0 ">
+      <div class="form-inputs  space-y-4 flex flex-col justify-center items-center p-6 md:mx-0 ">
 
         <%= f.input :title,
                     autofocus: true,
@@ -34,16 +34,15 @@
                     wrapper_html: { class: "flex flex-col w-full md:w-2/3"} %>
 
         <div class="form-actions mt-6 w-full flex justify-center">
-          <%= f.button :submit, "Update!", class: "block w-full md:w-1/4 text-white bg-blue-600 hover:bg-blue-700 text-gray-100 shadow-lg font-medium rounded-lg text-md py-2.5 text-center mt-4" %>
+          <%= f.button :submit, "Update", class: "block w-full md:w-1/4 text-white bg-blue-600 hover:bg-blue-700 text-gray-100 shadow-lg font-medium rounded-lg text-md py-2.5 text-center mt-4" %>
         </div>
       </div>
     <% end %>
   <% end %>
-  <p><%= offer.title %></p>
+  <p class="text-center mt-2"><%= offer.title %> / <%= offer.address %></p>
 </div>
 
 <script>
 
-$("form").hide()
-
+$(".offer form").hide();
 </script>
