Profile page done for now

--- a/app/views/shared/_offer.html.erb
+++ b/app/views/shared/_offer.html.erb
@@ -39,7 +39,8 @@
       </div>
     <% end %>
   <% end %>
-  <p class="text-center mt-2"><%= offer.title %> / <%= offer.address %></p>
+  <p class="text-center mt-2"><%= offer.title %></p>
+  <p class="text-center text-sm text-gray-500"><%= offer.address %></p>
 </div>
 
 <script>
