--- a/app/views/shared/_edit_user.html.erb
+++ b/app/views/shared/_edit_user.html.erb
@@ -19,19 +19,16 @@
                       wrapper_html: { class: "flex justify-between w-full md:w-2/3"} %>
 
           <%= f.input :phone_number,
-                      required: true,
                       autofocus: true,
                       input_html: { autocomplete: "email", class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500", placeholder: "000 000 00 00" },
                       wrapper_html: { class: "flex justify-between w-full md:w-2/3"} %>
 
           <%= f.input :address,
-                      required: true,
                       autofocus: true,
                       input_html: { autocomplete: "email", class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500" },
                       wrapper_html: { class: "flex justify-between w-full md:w-2/3"} %>
 
           <%= f.input :city,
-                      required: true,
                       autofocus: true,
                       input_html: { autocomplete: "email", class: "px-4 py-2 border rounded focus:outline-none focus:border-blue-500" },
                       wrapper_html: { class: "flex justify-between w-full md:w-2/3"} %>
@@ -51,14 +48,18 @@
                       wrapper_html: { class: "flex justify-between w-full md:w-2/3"} %>
 
           <%= f.input :phone_number_visible,
-                      required: true,
                       autofocus: true,
                       input_html: { autocomplete: "email", class: "mr-2 px-4 py-2 border rounded focus:outline-none focus:border-blue-500" },
                       wrapper_html: { class: "flex justify-between w-full md:w-2/3"},
                       label: "Make my phone number public" %>
 
+          <%= f.input :email_visible,
+                      autofocus: true,
+                      input_html: { autocomplete: "email", class: "mr-2 px-4 py-2 border rounded focus:outline-none focus:border-blue-500" },
+                      wrapper_html: { class: "flex justify-between w-full md:w-2/3"},
+                      label: "Make my email public" %>
+
           <%= f.input :address_visible,
-                      required: true,
                       autofocus: true,
                       input_html: { autocomplete: "email", class: "mr-2 px-4 py-2 border rounded focus:outline-none focus:border-blue-500" },
                       wrapper_html: { class: "flex justify-between w-full md:w-2/3"},
