--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-  <div class="fixed bottom-0 right-0 w-full flex justify-end rounded-lg opacity-60">
+  <div class="fixed bottom-0 right-0 w-full flex justify-end rounded-lg opacity-60 z-50">
     <div class="relative px-3 py-3 mb-4 border rounded-xl bg-teal-200 border-teal-300 text-teal-800  opacity-0 opacity-100 block m-1 w-1/2 flash" role="alert">
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       <%= notice %>
@@ -7,7 +7,7 @@
   </div>
 <% end %>
 <% if alert %>
-  <div class="fixed bottom-0 right-0 w-full flex justify-end rounded-lg opacity-60">
+  <div class="fixed bottom-0 right-0 w-full flex justify-end rounded-lg opacity-60 z-50">
     <div class="relative px-3 py-3 mb-4 border rounded-xl bg-teal-200 border-teal-300 text-teal-800  opacity-0 opacity-100 block m-1 w-1/2 flash" role="alert">
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       <%= alert %>
