--- a/app/views/shared/_item_main.html.erb
+++ b/app/views/shared/_item_main.html.erb
@@ -2,53 +2,52 @@
 
   <%# TODO:  Main %>
 
-  <main class="flex justify-center">
-    <div id="description" class="w-full md:w-3/4 lg:w-1/2 xl:w-2/5 p-4">
-      <%= content_tag(:p, item.description) %>
-    </div>
+<main class="flex justify-center">
+  <div id="description" class="w-full md:w-3/4 lg:w-1/2 xl:w-2/5 p-4">
+    <%= content_tag(:p, item.description) %>
+  </div>
 
-    <div id="specifications" class="hidden w-full md:w-3/4 lg:w-1/2 xl:w-2/5 p-4">
+  <div id="specifications" class="hidden w-full md:w-3/4 lg:w-1/2 xl:w-2/5 p-4">
 
-      <% item.attribute_names.each do |attribute| %>
-        <% next if ['description', 'title'].include?(attribute)  %>
-        <div class="flex justify-between">
-          <p class="text-blue-700"><strong><%= attribute.humanize %></strong></p>
-          <p class="text-red-500">
-            <strong>
-              <% if ['created_at', 'updated_at'].include?(attribute) %>
-                <%= item.send(attribute).strftime('%d %B %Y') %>
-              <% elsif attribute == "user_id" %>
-                <%# TODO: Add a link here, it'll send the user to the bottom of the page %>
-                <%= item.user.full_name %>
-              <% else %>
-                <%= item.send(attribute) %>
-              <% end %>
-            </strong>
-          </p>
-        </div>
-      <% end %>
-
+    <% item.attribute_names.each do |attribute| %>
+      <% next if ['description', 'title'].include?(attribute)  %>
       <div class="flex justify-between">
-        <p class="text-blue-700"><strong>Address</strong></p>
-        <p class="text-red-500"><strong><%= Offer.find_by(offerable: item).address %></strong></p>
+        <p class="text-blue-700"><strong><%= attribute.humanize %></strong></p>
+        <p class="text-red-500">
+          <strong>
+            <% if ['created_at', 'updated_at'].include?(attribute) %>
+              <%= item.send(attribute).strftime('%d %B %Y') %>
+            <% elsif attribute == "user_id" %>
+              <%# TODO: Add a link here, it'll send the user to the bottom of the page %>
+              <%= item.user.full_name %>
+            <% else %>
+              <%= item.send(attribute) %>
+            <% end %>
+          </strong>
+        </p>
       </div>
+    <% end %>
 
+    <div class="flex justify-between">
+      <p class="text-blue-700"><strong>Address</strong></p>
+      <p class="text-red-500"><strong><%= Offer.find_by(offerable: item).address %></strong></p>
     </div>
+  </div>
 
-    <%# TODO: Geolocation. Map goes here. %>
-    <div id="location" class="w-full md:w-3/4 lg:w-1/2 xl:w-2/5 flex justify-center">
-      <div class="shadow-xl overflow-hidden" style="width: 730px; height: 610px;"
-        data-controller="map"
-        data-map-markers-value="<%= @markers.to_json %>"
-        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-      </div>
+  <%# TODO: Geolocation. Map goes here. %>
+  <div id="location" class="w-full md:w-3/4 lg:w-1/2 xl:w-2/5 flex justify-center">
+    <div class="shadow-xl overflow-hidden" style="width: 730px; height: 610px;"
+      data-controller="map"
+      data-map-markers-value="<%= @markers.to_json %>"
+      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
-  </main>
+  </div>
+</main>
 
-
-
-  <%= link_to "Back", "javascript:void(0);", id: "back-button" %>
+<div class="flex justify-end w-full md:w-3/4 lg:w-1/2 xl:w-2/5 m-auto">
+  <%= link_to "Back", "javascript:void(0);", id: "back-button", class: "text-white bg-gradient-to-r from-pink-400 via-pink-500 to-pink-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-pink-300 dark:focus:ring-pink-800 shadow-lg shadow-pink-500/50 dark:shadow-lg dark:shadow-pink-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center hidden sm:block" %>
 </div>
+
 
 <%# TODO:  Profile %>
 <div class="flex flex-col justify-center items-center h-[100vh]">
