--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,21 +14,26 @@
   </aside>
 
   <article class="grid grid-cols-1 md:grid-cols-3 md:col-span-7 xl:grid-cols-4 xl:col-span-6 col-span-7 gap-3 content-start w-full">
-    <%# Filters %>
-
-    <%# <div class="col-span-4 bg-red-200">
-      <p>yo</p>
-    </div>
-    <hr class="col-span-4"> %>
     <%# Render offers for homepage %>
     <% @offers.where(visible: true).each do |offer| %>
-      <div class="p-6 w-full md:hover:bg-yellow-100 xl:hover:scale-110 md:hover:shadow-sm rounded-xl transition duration-600 flex flex-col content-center">
+      <div class="p-6 w-full md:hover:bg-yellow-50 xl:hover:scale-110 md:hover:shadow-sm rounded-xl transition duration-600 flex flex-col content-center">
         <%= offerable_link(offer) %>
       </div>
     <% end %>
   </article>
 </section>
 
+<%# TODO: Button. It's going to show and hide the categories. %>
+<div class="btn-close content-navigator-close">
+<svg fill="#000000" class="eacon eac-angle-right-solid" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M12.969 4.281L11.53 5.72 21.812 16l-10.28 10.281 1.437 1.438 11-11 .687-.719-.687-.719z"></path></svg> </div>
+
+<style>
+.mirror {
+     -moz-transform: scale(-1, 1);
+     -webkit-transform: scale(-1, 1);
+     transform: scale(-1, 1);
+  }
+</style>
 
 <script>
   // Menu items
