--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -46,6 +46,9 @@
             <a href="/properties" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Properties</a>
             <a href="/vehicles" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Vehicles</a>
             <a href="/services" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Services</a>
+            <%= link_to new_offer_path, class: "no-underline " do %>
+              <button class="text-gray-300 bg-orange-700 hover:bg-orange-500 hover:text-white rounded-md px-3 py-2 text-sm font-medium">New Offer</button>
+            <% end %>
           </div>
         </div>
       </div>
@@ -89,6 +92,7 @@
             -->
             <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1" id="profile-dropdown">
               <!-- Active: "bg-gray-100", Not Active: "" -->
+
               <%= link_to user_profile_path(current_user), class: "no-underline " do %>
                 <button class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-700 hover:text-white w-full rounded-md" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</button>
               <% end %>
